style: fixed moves spacing for desktop

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -177,7 +177,7 @@ video {
     /*flex-wrap: wrap;*/
     /*justify-content: space-between;*/
     /*align-items: center;*/
-    /*margin: 0 0 3em;*/
+    margin: 0;
 }
 
 .game-board .card {
